# edge-ai-suites

./: README.md
.github/: CODEOWNERS
.github/workflows/: build-documentation.yml  industrial-edge-insights-time-series-pull-request.yml  industrial-edge-insights-time-series-scans.yml  pre-merge.yml  robotics-components-fast-mapping.yaml  robotics-components-its-planner.yaml  robotics-components-multicam-demo.yaml  robotics-components.yaml  robotics-pre-merge.yaml  robotics-workflow.yaml  sensor-fusion-for-traffic-management-scan.yaml  video-processing-for-nvr-scan.yaml  visual-search-qa-scans.yml
education-ai-suite/smart-classroom/: README.md  config.yaml  main.py  pipeline.py  requirements.txt
education-ai-suite/smart-classroom/api/: endpoints.py
education-ai-suite/smart-classroom/components/va/csrc/: CMakeLists.txt  extended_roi.h  gvaposturedetect.cpp  gvaposturedetect.h  gvareid.cpp  gvareid.h  gvaroifilter.cpp  gvaroifilter.h  gvasmartclassroom.cpp
manufacturing-ai-suite/: README.md
manufacturing-ai-suite/industrial-edge-insights-multimodal/: CHANGELOG  README.md
manufacturing-ai-suite/industrial-edge-insights-time-series/: CHANGELOG  Makefile  README.md  docker-compose.yml
manufacturing-ai-suite/industrial-edge-insights-vision/: .env  .env_pcb_anomaly_detection  .env_weld_porosity_classification  .env_worker_safety_gear_detection  README.md
metro-ai-suite/: README.md
metro-ai-suite/image-based-video-search/: .env  compose.yml
metro-ai-suite/metro-vision-ai-app-recipe/: .env  compose-scenescape.yml
metro-ai-suite/sensor-fusion-for-traffic-management/: CMakeLists.txt  README.md  build.sh  how_to_get_RADDet_datasets.md  install_driver_related_libs.sh  install_project_related_libs.sh  run_service_bare.sh  scan_install_project_related_libs.sh
metro-ai-suite/sensor-fusion-for-traffic-management/ai_inference/liblidar/: CMakeLists.txt  bench.cpp  build.sh  demo.cpp  env.sh
metro-ai-suite/sensor-fusion-for-traffic-management/ai_inference/liblidar/data/kitti/pcd/: 000000.pcd  000001.pcd  000002.pcd  000003.pcd  000004.pcd  000005.pcd
metro-ai-suite/sensor-fusion-for-traffic-management/ai_inference/liblidar/src/: anchorgrid.cpp  anchorgrid.hpp  common.hpp  devicemanager.cpp  devicemanager.hpp  liblidar.hpp  nms.cpp  nms.hpp  pointpillars.cpp  postprocess.cpp  postprocess.hpp  preprocess.cpp  preprocess.hpp  scan.cpp  scan.hpp  scatter.cpp  scatter.hpp
metro-ai-suite/smart-nvr/: .coveragerc  .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
metro-ai-suite/smart-nvr/charts/: .helmignore  Chart.yaml  user_value_override.yaml  values.yaml
metro-ai-suite/smart-nvr/charts/subchart/frigate/: Chart.yaml  values.yaml
metro-ai-suite/smart-nvr/charts/subchart/frigate/templates/: configmap.yaml  deployment.yaml  frigate-configmap.yaml  pvc.yaml  recordings-pvc.yaml  service.yaml
metro-ai-suite/smart-nvr/charts/subchart/mqtt-broker/: Chart.yaml  values.yaml
metro-ai-suite/smart-nvr/charts/subchart/mqtt-broker/templates/: deployment.yaml  mqtt-configmap.yaml  service.yaml
metro-ai-suite/smart-nvr/charts/subchart/nvr-event-router/: Chart.yaml  values.yaml
metro-ai-suite/smart-nvr/charts/subchart/nvr-event-router-ui/: Chart.yaml  values.yaml
metro-ai-suite/smart-nvr/charts/subchart/nvr-event-router-ui/templates/: deployment.yaml  service.yaml
metro-ai-suite/smart-nvr/charts/subchart/nvr-event-router/templates/: deployment.yaml  service.yaml
metro-ai-suite/smart-nvr/charts/subchart/redis/: Chart.yaml  values.yaml
metro-ai-suite/smart-nvr/charts/subchart/redis/templates/: deployment.yaml  service.yaml
metro-ai-suite/smart-nvr/charts/templates/: ingress.yaml
metro-ai-suite/smart-nvr/docker/: compose.yaml  entrypoint.sh
metro-ai-suite/smart-nvr/docs/user-guide/: Overview.md  Troubleshooting.md  api-reference.md  deploy-with-helm.md  get-started.md  how-to-build-from-source.md  how-to-use-application.md  index.md  release-notes.md  scenescape-integration.md  system-requirements.md  troubleshooting.md
metro-ai-suite/smart-nvr/docs/user-guide/api-docs/: smart-nvr.yaml
metro-ai-suite/smart-nvr/resources/: compose-scenescape-rtsp.yml  si-rtsp-config.json
metro-ai-suite/smart-nvr/resources/frigate-config/: config-default.yml  config-scenescape.yml
metro-ai-suite/smart-nvr/src/: config.py  main.py
metro-ai-suite/smart-nvr/src/api/: router.py
metro-ai-suite/smart-nvr/src/api/endpoints/: summarization_api.py
metro-ai-suite/smart-nvr/src/service/: api_server.py  directory_watcher.py  mqtt_listener.py  redis_store.py  rule_engine.py  vms_service.py
metro-ai-suite/smart-nvr/src/tests/: conftest.py  test_directory_watcher_extra.py  test_directory_watcher_unit.py  test_dispatcher.py  test_frigate_service.py  test_main_entry.py  test_mqtt_listener_unit.py  test_redis_store.py  test_router_cameras.py  test_rule_engine_additional.py  test_rule_responses_endpoints.py  test_rules_endpoints.py  test_summarization_service.py  test_summary_endpoints.py  test_utils_upload.py  test_utils_upload_retry.py  test_vms_service.py  test_vms_service_extra.py  test_watcher_mapping.py
metro-ai-suite/smart-nvr/src/utils/: common.py  utils.py
metro-ai-suite/smart-nvr/ui/: main.py
metro-ai-suite/smart-nvr/ui/interface/: interface.py
metro-ai-suite/smart-nvr/ui/services/: api_client.py  video_processor.py
metro-ai-suite/smart-nvr/ui/test/: test_api_client.py  test_api_client_extra.py  test_common.py  test_event_utils.py  test_interface.py  test_interface_extra.py  test_ui_main_entry.py  test_video_processor.py  test_video_processor_timezone.py
metro-ai-suite/video-processing-for-nvr/: README.md  build.sh
metro-ai-suite/visual-search-question-and-answering/: third-party-programs.txt
retail-ai-suite/: README.md
robotics-ai-suite/robot-vision-control/src/rvc_vision/rvc_pose_detector/: CMakeLists.txt
robotics-ai-suite/robot-vision-control/src/rvc_vision/rvc_pose_detector/include/: rvc_pose_detector.hpp
robotics-ai-suite/robot-vision-control/src/rvc_vision/rvc_pose_detector/src/: rvc_pose_detector.cpp
(+434 files in other folders)
