[tool.poetry]
name = "smart-nvr"
version = "0.1.0"
description = "Smart NVR microservice + UI"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "src" }, { include = "ui" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
watchdog = "==4.0.0"
fastapi = "==0.115.5"
uvicorn = {version = "0.29.0", extras = ["standard"]}
requests = "==2.32.4"
aiofiles = "==23.2.1"
pydantic = ">=2.0"
python-dotenv = "==1.0.0"
gradio = "==5.34.2"
paho-mqtt = "==1.6.1"
redis = ">=6.2.0"
aiohttp = "==3.10.11"
pytz = "==2023.3"
pydantic-settings = ">=2.0.0"

[tool.poetry.group.test.dependencies]
pytest = "==8.2.2"
pytest-asyncio = "==0.23.7"
pytest-cov = "==5.0.0"
httpx = "==0.27.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"

[tool.coverage.run]
source = ["src", "ui"]
branch = true
omit = ["ui/interface/interface.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
